--- a/css/styles.css
+++ b/css/styles.css
@@ -24,32 +24,6 @@
   --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-body.team-body {
-  font-family: "Roboto", sans-serif;
-}
-
-.page-wrapper {
-  background-color: var(--background-color);
-}
-
-.page-wrapper .page-wrapper {
-  display: flex;
-  justify-content: space-around;
-  padding-top: 94px;
-  width: 1200px;
-}
-
-.page-wrapper {
-  flex-direction: column;
-  align-items: center;
-}
-
-.page-header {
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  border-bottom: 1px solid #e7e9fc;
-}
 
 .page-header nav {
   display: flex;
@@ -1041,7 +1015,7 @@ textarea {
   right: 24px;
 }
 /* Stiluri generale pentru meniu */
-@media screen and  (min-width: 428px)and (max-width:768px) {
+@media screen and (min-width: 428px)and (max-width:768px) {
   .menu-toggle {
     display: none;
     /* Hide hamburger menu on larger screens */
@@ -1052,6 +1026,7 @@ textarea {
     /* Show navigation menu on larger screens */
   }
 }
+
 /* Hidden Checkbox */
 .menu-toggle-checkbox {
   display: none;
@@ -1059,26 +1034,14 @@ textarea {
 
 /* Show Menu When Checkbox is Checked */
 .menu-toggle-checkbox:checked~.nav-menu {
-  display: block;}
-
-@media screen and (min-width: 429px) and(max-width:768px){
+  display: block;
 }
+/*styles for screens small than 428px*/
+@media screen and (min-width: 429px) and (max-width:768px) {}
 
 /* Styles for screens larger betheen 768px and 1158px */
-@media screen and (min-width: 769px)and (max-width:1158px) {
-
-}
+@media screen and (min-width: 769px) and (max-width:1158px) {}
 
 /* Styles for screens larger than 1158px */
-@media screen and (min-width: 1159px) {
-  
-}
-/* Default background image */
-
-
-/* High-resolution background image */
-
-@media screen and (min-resolution: 1dppx)and (max-resolution:2ddpx) {
-
-}
+@media screen and (min-width: 1159px) {}
 
